Fixed article layout on mobile

--- a/readmore/main/static/css/articleStyle.css
+++ b/readmore/main/static/css/articleStyle.css
@@ -22,10 +22,16 @@ Contrast:       #F35C9F
     font-size: 2em;
     font-weight: bold;
     box-shadow: 0px 2px 2px -2px; #22ADC2 inset;
+    padding: 5px 10px;
 }
 
 #article p {
     font-size: 1.2em;
+        padding: 5px 15px;
+}
+#imageHolder {
+    margin: 5px 25px;
+    padding: 5px 5px;
 }
 
 #imageHolder img {
@@ -34,6 +40,7 @@ Contrast:       #F35C9F
     width: 100% !important;
     height: auto !important;
     max-width: 100% !important;
+
 }
 
 #cover {
@@ -97,10 +104,13 @@ Contrast:       #F35C9F
 #cover.open a{
     bottom: 0px;
 }
-@media all and (max-width: 959px){
+@media all and (max-width: 800px){
     #cover a{
         font-size: 0.5em;
         height:10%;
+    }
+    #mainContent .row{
+        margin: 0 0;
     }
 }
 
